--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -382,6 +382,25 @@
 				</div>
 			</div>
 		</div>
+
+		<hr style="border:2px solid #aaa">
+
+		<div id="pharse8" class="row">
+			<div class="col-md-6">
+				<div class="admin">
+					<h5>ADMIN</h5>
+					<ul>
+						<li><a href="admin-products-form-add.html">Admin Edit Product</a></li>
+						<li><a href="admin-shipping-policy-form.html">Admin Shipping Policy Form</a></li>
+						<li><a href="admin-statistic-report.html">Admin Statistic</a></li>
+						<li><a href="admin-statistic-list-product.html">Admin Statistic List Product</a></li>
+						<li><a href="admin-statistic-list-keyword.html">Admin Statistic List keyword</a></li>
+						<li><a href="admin-statistic-list-shop.html">Admin Statistic List Shop</a></li>
+					</ul>
+				</div>
+				
+			</div>
+		</div>
 	</div>
 
 	<!-- /END WRAPPER -->
@@ -393,6 +412,7 @@
 		<li><a href="#pharse5">Pharse 5</a></li>
 		<li><a href="#pharse6">Pharse 6</a></li>
 		<li><a href="#pharse7">Pharse 7</a></li>
+		<li><a href="#pharse8">Pharse 8</a></li>
 	</ul>
 
 </body>
