3B - add seller combo

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -398,7 +398,12 @@
 						<li><a href="admin-statistic-list-shop.html">Admin Statistic List Shop</a></li>
 					</ul>
 				</div>
-				
+				<div class="admin">
+					<h5>SELLER</h5>
+					<ul>
+						<li><a href="seller-combo.html">Seller Combo</a></li>
+					</ul>
+				</div>				
 			</div>
 		</div>
 	</div>
