3B - add combo product in product details

--- a/3B-WEB/product-details.html
+++ b/3B-WEB/product-details.html
@@ -701,6 +701,152 @@
 					</div>
 					<!-- /END OTHER PRODUCTS SHOP -->
 
+					<!-- BEGIN COMBO PRODUCTS SHOP -->
+					<div class="other-products combo-product">
+						<h4>Thường được mua cùng</h4>
+						<div class="combo-product-image">
+							<div class="row">
+								<div class="col-md-6">
+									<ul>
+										<li><img class="p-image" src="assets/images/img29.jpg"></li>
+										<li><img class="p-image" src="assets/images/img14.png"></li>
+										<li><img class="p-image" src="assets/images/img30.jpg"></li>
+									</ul>
+									
+								</div>
+								<div class="col-md-4">
+									<button class="btn btn-danger">Thêm cả 3 sản phẩm vào giỏ hàng</button>
+									<h4>Tổng tiền: <span class="price txt-red">125.000đ</span></h4>
+								</div>
+								<div class="clearfix"></div>
+							</div>							
+						</div>
+
+						<div class="row margin-b3">
+							<div class="col-md-12 margin-b3">
+								<div class="chk">
+									<input type="checkbox" name="chk1" id="chk1" class="chk-custom" checked="checked">
+									<label for="chk1" class="chk-custom-label"></label>
+								</div>
+								<label><span>Sản phẩm đang xem: </span>Máy tính</label>
+							</div>
+							<div class="combo-item">
+								<div class="col-md-4">
+									<!-- custom slb 2 -->
+									<div class="custom-slb-2">
+										<div class="icon"><img src="assets/images/svg/small-triangle-down.svg"></div>
+
+										<div id="selected" class="selected">
+											<span>Size: S</span>
+											<span>Màu: Đỏ</span>
+										</div>
+
+										<div class="options">
+											<div class="option">
+												<span>Size: S</span>
+												<span>Màu: Đỏ</span>
+											</div>
+											<div class="option same-active">
+												<span>Size: M</span>
+												<span>Màu: Đen</span>
+											</div>
+											<div class="option">
+												<span>Size: L</span>
+												<span>Màu: Xanh</span>
+											</div>
+										</div>
+									</div>
+									<!-- /custom slb 2 -->
+								</div>
+								<div class="col-md-3"><span class="price txt-red">125.000đ</span></div>
+								<div class="clearfix"></div>
+							</div>
+						</div>
+
+						<div class="row margin-b3">
+							<div class="col-md-12 margin-b3">
+								<div class="chk">
+									<input type="checkbox" name="chk2" id="chk2" class="chk-custom" checked="checked">
+									<label for="chk2" class="chk-custom-label"></label>
+								</div>
+								<label><a href="#">Chuột máy tính</a></label>
+							</div>
+							<div class="combo-item">
+								<div class="col-md-4">
+									<!-- custom slb 2 -->
+									<div class="custom-slb-2">
+										<div class="icon"><img src="assets/images/svg/small-triangle-down.svg"></div>
+
+										<div id="selected" class="selected">
+											<span>Size: S</span>
+											<span>Màu: Đỏ</span>
+										</div>
+
+										<div class="options">
+											<div class="option">
+												<span>Size: S</span>
+												<span>Màu: Đỏ</span>
+											</div>
+											<div class="option same-active">
+												<span>Size: M</span>
+												<span>Màu: Đen</span>
+											</div>
+											<div class="option">
+												<span>Size: L</span>
+												<span>Màu: Xanh</span>
+											</div>
+										</div>
+									</div>
+									<!-- /custom slb 2 -->
+								</div>
+								<div class="col-md-3"><span class="price txt-red">125.000đ</span></div>
+								<div class="clearfix"></div>
+							</div>
+						</div>
+
+						<div class="row margin-b3">
+							<div class="col-md-12 margin-b3">
+								<div class="chk">
+									<input type="checkbox" name="chk3" id="chk3" class="chk-custom">
+									<label for="chk3" class="chk-custom-label"></label>
+								</div>
+								<label><a href="#">Bàn phím máy tính</a></label>
+							</div>
+							<div class="combo-item disabled">
+								<div class="col-md-4">
+									<!-- custom slb 2 -->
+									<div class="custom-slb-2">
+										<div class="icon"><img src="assets/images/svg/small-triangle-down.svg"></div>
+
+										<div id="selected" class="selected">
+											<span>Size: S</span>
+											<span>Màu: Đỏ</span>
+										</div>
+
+										<div class="options">
+											<div class="option">
+												<span>Size: S</span>
+												<span>Màu: Đỏ</span>
+											</div>
+											<div class="option same-active">
+												<span>Size: M</span>
+												<span>Màu: Đen</span>
+											</div>
+											<div class="option">
+												<span>Size: L</span>
+												<span>Màu: Xanh</span>
+											</div>
+										</div>
+									</div>
+									<!-- /custom slb 2 -->
+								</div>
+								<div class="col-md-3"><span class="price txt-red">125.000đ</span></div>
+								<div class="clearfix"></div>
+							</div>							
+						</div>
+					</div>
+					<!-- /END COMBO PRODUCTS SHOP -->
+
 					<!-- BEGIN PRODUCT INFOMATION -->
 					<div class="product-infomation">
 						<h4>Product Infomation</h4>
