3B - update seller shipping-policy

--- a/3B-NEW/admin-products-form-add.html
+++ b/3B-NEW/admin-products-form-add.html
@@ -614,6 +614,7 @@
 											<li><input type="text" class="form-control" placeholder="đ Giá lẻ"></li>
 											<li><input type="text" class="form-control" placeholder="đ Giá ghép đơn"></li>
 											<li><input type="text" class="form-control" placeholder="Kho hàng"></li>
+											<li><input type="text" class="form-control" placeholder="Mã"></li>
 											<li><button type="button" class="btn btn-flat btn-success">Áp dụng cho tất cả</button></li>
 										</ul>
 
