3B - update index link

--- a/3B-NEW/seller-products-form-add.html
+++ b/3B-NEW/seller-products-form-add.html
@@ -114,6 +114,9 @@
 								<a href="seller-vanchuyen.html"><span>Cài đặt vận chuyển</span></a>
 							</li>
 							<li>
+								<a href="seller-shipping-policy-kg.html"><span>Chính sách vận chuyển</span></a>
+							</li>
+							<li>
 								<a href="profile-address-seller.html"><span>Địa chỉ</span></a>
 							</li>
 							<li>
