--- a/3B-NEW/seller-shipping-policy-kg.html
+++ b/3B-NEW/seller-shipping-policy-kg.html
@@ -114,7 +114,7 @@
 								<a href="seller-vanchuyen.html"><span>Cài đặt vận chuyển</span></a>
 							</li>
 							<li class="active">
-								<a href="seller-shipping-policy.html"><span>Chính sách vận chuyển</span></a>
+								<a href="seller-shipping-policy-kg.html"><span>Chính sách vận chuyển</span></a>
 							</li>
 							<li>
 								<a href="profile-address-seller.html"><span>Địa chỉ</span></a>
