--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -402,7 +402,7 @@
 					<h5>SELLER</h5>
 					<ul>
 						<li><a href="seller-combo.html">Seller Combo</a></li>
-						<li><a href="seller-shipping-policy.html">Seller Shipping Policy</a></li>
+						<li><a href="seller-shipping-policy-kg.html">Seller Shipping Policy</a></li>
 					</ul>
 				</div>				
 			</div>
