--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -403,6 +403,8 @@
 					<ul>
 						<li><a href="seller-combo.html">Seller Combo</a></li>
 						<li><a href="seller-shipping-policy-kg.html">Seller Shipping Policy</a></li>
+						<li><a href="seller-statistic.html">Seller Statistic</a></li>
+						<li><a href="seller-statistic-best-selling.html">Seller Statistic Best Selling</a></li>
 					</ul>
 				</div>				
 			</div>
