--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -396,6 +396,7 @@
 						<li><a href="admin-statistic-list-product.html">Admin Statistic List Product</a></li>
 						<li><a href="admin-statistic-list-keyword.html">Admin Statistic List keyword</a></li>
 						<li><a href="admin-statistic-list-shop.html">Admin Statistic List Shop</a></li>
+						<li><a href="admin-setting-design.html">Admin Setting Design</a></li>
 					</ul>
 				</div>
 				<div class="admin">
