3B - update home page hot search

--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -796,6 +796,70 @@
 				<div class="clearfix"></div>
 				<!-- /END SELETED STORES -->
 
+				<!-- BEGIN SELETED STORES -->
+				<div class="col-md-12">
+					<div class="head-title">
+						<h4 class="custom-title"><i class="fa fa-search txt-red"></i> Tìm kiếm nổi bật</h4>
+						<a href="#"><i class="fa fa-refresh"></i> Load more</a>
+					</div>
+					
+
+					<div class="seleted-stores margin-b50">
+						<div class="row">
+							<div class="col-md-3 col-sm-6 margin-b3">
+								<div class="store">
+									<div class="store-head">
+										<h3>Đồng hồ thông minh</h3>
+									</div>
+									<ul class="store-products">
+										<li><a href="#"><img class="img75 br6" src="assets/images/img30.jpg"></a></li>
+										<li><a href="#"><img class="img75 br6" src="assets/images/img22.png"></a></li>
+										<li><a href="#"><img class="img75 br6" src="assets/images/img29.jpg"><span>+126</span></a></li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-md-3 col-sm-6 margin-b3">
+								<div class="store">
+									<div class="store-head">
+										<h3>Áo giữ nhiệt</h3>
+									</div>
+									<ul class="store-products">
+										<li><a href="#"><img class="img75 br6" src="assets/images/img29.jpg"></a></li>
+										<li><a href="#"><img class="img75 br6" src="assets/images/img30.jpg"></a></li>
+										<li><a href="#"><img class="img75 br6" src="assets/images/img23.png"><span>+126</span></a></li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-md-3 col-sm-6 margin-b3">
+								<div class="store">
+									<div class="store-head">
+										<h3>Đồng hồ thông minh</h3>
+									</div>
+									<ul class="store-products">
+										<li><a href="#"><img class="img75 br6" src="assets/images/img29.jpg"></a></li>
+										<li><a href="#"><img class="img75 br6" src="assets/images/img30.jpg"></a></li>
+										<li><a href="#"><img class="img75 br6" src="assets/images/img23.png"><span>+126</span></a></li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-md-3 col-sm-6 margin-b3">
+								<div class="store">
+									<div class="store-head">
+										<h3>Đồng hồ thông minh</h3>
+									</div>
+									<ul class="store-products">
+										<li><a href="#"><img class="img75 br6" src="assets/images/img21.png"></a></li>
+										<li><a href="#"><img class="img75 br6" src="assets/images/img22.png"></a></li>
+										<li><a href="#"><img class="img75 br6" src="assets/images/img23.png"><span>+126</span></a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="clearfix"></div>
+				<!-- /END SELETED STORES -->
+
 				<!-- BEGIN HOT PRODUCTS TODAY -->
 				<div class="col-md-12 margin-b20">
 					<h4 class="margin-b20 custom-title"><img src="assets/images/svg/flame.svg"> Hàng hot hôm nay</h4>
