--- a/3B-NEW/seller-statistic-best-selling.html
+++ b/3B-NEW/seller-statistic-best-selling.html
@@ -376,7 +376,9 @@
 								display: true,
 							},
 							yAxes: {
-								// display: true,
+								grid: {
+									display: false
+								},
 							}
 						},
 					},
