3B - update admin-manage-shop + seller-setting-status

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -397,6 +397,7 @@
 						<li><a href="admin-statistic-list-keyword.html">Admin Statistic List keyword</a></li>
 						<li><a href="admin-statistic-list-shop.html">Admin Statistic List Shop</a></li>
 						<li><a href="admin-setting-design.html">Admin Setting Design</a></li>
+						<li><a href="admin-manage-shop.html">Admin Manage Shop</a></li>
 					</ul>
 				</div>
 				<div class="admin">
@@ -406,6 +407,7 @@
 						<li><a href="seller-shipping-policy-kg.html">Seller Shipping Policy</a></li>
 						<li><a href="seller-statistic.html">Seller Statistic</a></li>
 						<li><a href="seller-statistic-best-selling.html">Seller Statistic Best Selling</a></li>
+						<li><a href="seller-setting-status.html">Seller Setting Status</a></li>
 					</ul>
 				</div>				
 			</div>
