--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 	<!-- BEGIn WRAPPER -->
 	<div class="wrapper" style="width:90%;margin:50px auto;">
-		<a href="3B-NEW/">Black Best Buy - ADMIN NEW STYLE</a>
+		<a href="3B-NEW/">Black Best Buy - MOCKUP ADMIN AND SELLER (web version)</a>
 		<br>
 		<br>
-		<a href="3B-WEB/">Black Best Buy - WEB PC</a>
+		<a href="3B-WEB/">Black Best Buy - Buyer (web version)</a>
 	</div>
 	<!-- /END WRAPPER -->
 </body>
