3B - update seller-products-form-add

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -390,7 +390,6 @@
 				<div class="admin">
 					<h5>ADMIN</h5>
 					<ul>
-						<li><a href="admin-products-form-add.html">Admin Edit Product</a></li>
 						<li><a href="admin-shipping-policy-form.html">Admin Shipping Policy Form</a></li>
 						<li><a href="admin-statistic-report.html">Admin Statistic</a></li>
 						<li><a href="admin-statistic-list-product.html">Admin Statistic List Product</a></li>
@@ -403,6 +402,7 @@
 				<div class="admin">
 					<h5>SELLER</h5>
 					<ul>
+						<li><a href="seller-products-form-add.html">Seller Add Product</a></li>
 						<li><a href="seller-combo.html">Seller Combo</a></li>
 						<li><a href="seller-shipping-policy-kg.html">Seller Shipping Policy</a></li>
 						<li><a href="seller-statistic.html">Seller Statistic</a></li>
