3B - update seller-order-return-info-evidence

--- a/3B-NEW/seller-order-return-info-evidence.html
+++ b/3B-NEW/seller-order-return-info-evidence.html
@@ -256,7 +256,7 @@
 					<h3 class="title">Shipping Info</h3>
 					<div class="row">
 						<div class="col-md-6">
-							<div class="track"><img src="assets/images/img2.jpg"> Viettel Post</div>
+							<div class="track">Shop tự vận chuyển</div>
 						</div>
 						<div class="col-md-6">
 							<div class="total"><b>Required Number:</b> #190013123MIGK50</div>
@@ -268,7 +268,7 @@
 				<div class="order-block-item addr margin-b">
 					<div class="row">
 						<div class="col-md-8">
-							<h3 class="title">Tải lên bằng chứng trả hàng</h3>
+							<h3 class="title">Tải lên bằng chứng giao hàng</h3>
 							<ul class="list-images-reason">
 								<li>
 									<img class="icons-svg" src="assets/images/img1.jpg">
@@ -283,6 +283,9 @@
 									<button class="btn btn-app"><i class="fa fa-plus"></i></button>
 								</li>
 							</ul>
+							<div class="form-group">
+								<textarea class="form-control" rows="3" placeholder="Ghi chú"></textarea>
+							</div>
 						</div>
 						<div class="clearfix"></div>
 					</div>
