--- a/3B-NEW/admin-setting-design.html
+++ b/3B-NEW/admin-setting-design.html
@@ -483,7 +483,11 @@
 										</div>
 									</div>
 								</div>
-								
+								<div class="clearfix"></div>
+								<div class="col-md-12">
+									<button type="button" class="btn btn-default">Cancel</button>
+									<button type="button" class="btn btn-danger">Update</button>
+								</div>
 							</div>
 						</div>
 						<!-- /END BOX BODY -->
