--- a/3B-NEW/admin-manage-shop.html
+++ b/3B-NEW/admin-manage-shop.html
@@ -424,10 +424,10 @@
 									<tbody>
 										<tr>
 											<td>
-												<div class="custom-wrap-line">Lorem isum dolor set amit deportible alquada mit Lorem isum dolor set amit deportible alquada mit</div>
+												<div class="custom-wrap-line"><a href="seller-profile.html" target="_blank">Lorem isum dolor set amit deportible alquada mit Lorem isum dolor set amit deportible alquada mit</a></div>
 											</td>
-											<td>123</td>
-											<td>455</td>
+											<td><a href="admin-product-list.html" target="_blank">123</a></td>
+											<td><a href="seller-order-pairing.html">455</a></td>
 											<td>
 												<div class="btn-group">
 													<button type="button" class="btn btn-success btn-xs">Dừng hoạt động</button>
@@ -436,9 +436,9 @@
 										</tr>
 										<tr>
 											<td>
-												<div class="custom-wrap-line">Lorem isum dolor set amit deportible alquada mit</div>
+												<div class="custom-wrap-line"><a href="seller-profile.html" target="_blank">Lorem isum dolor set amit</a></div>
 											</td>
-											<td>123</td>
+											<td><a href="admin-product-list.html" target="_blank">123</a></td>
 											<td>455</td>
 											<td>
 												<div class="btn-group">
