--- a/3B-NEW/admin-withdraw.html
+++ b/3B-NEW/admin-withdraw.html
@@ -453,8 +453,8 @@
 											<td>Chưa duyệt</td>
 											<td>
 												<center>
-													<button class="btn btn-default btn-xs margin-r-5">Duyệt</buttom>
-													<button class="btn btn-danger btn-xs">Từ chối</buttom>
+													<button class="btn btn-default btn-xs margin-r-5">Duyệt</button>
+													<button class="btn btn-danger btn-xs">Từ chối</button>
 												</center>
 											</td>
 										</tr>
