--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -408,6 +408,16 @@
 						<li><a href="seller-statistic.html">Seller Statistic</a></li>
 						<li><a href="seller-statistic-best-selling.html">Seller Statistic Best Selling</a></li>
 						<li><a href="seller-setting-status.html">Seller Setting Status</a></li>
+						<li><a href="seller-order-detail-not-accepted.html">Seller Order Detail (Seller chưa accept đơn hàng)</a></li>
+						<li><a href="seller-order-detail-accepted.html">Seller Order Detail (Seller đã accept đơn hàng)</a></li>
+						<li><a href="seller-order-shipping-confirm.html">Seller Order Shipping</a></li>
+					</ul>
+				</div>
+				<div class="admin">
+					<h5>Buyer</h5>
+					<ul>
+						<li><a href="buyer-order-detail-not-accepted.html">Buyer Order Detail (Buyer chưa accept đơn hàng)</a></li>
+						<li><a href="buyer-order-detail-accepted.html">Buyer Order Detail (Buyer đã accept đơn hàng)</a></li>
 					</ul>
 				</div>				
 			</div>
