--- a/3B-NEW/admin-product-list.html
+++ b/3B-NEW/admin-product-list.html
@@ -445,7 +445,9 @@
 												<img class="icons-svg small" src="assets/images/svg/image-temp.svg">
 											</td>
 											<td>
-												Thông hơi Quảng Châu siêu mát cho bé trai và gái <span class="btn btn-danger btn-xs">Chờ duyệt</span>
+												Thông hơi Quảng Châu siêu mát cho bé trai và gái 
+												<div><label class="btn btn-default btn-xs margin-b">Shop: Shusi Shop</label></div>
+												<div><span class="btn btn-danger btn-xs">Chờ duyệt</span></div>
 											</td>
 											<td>
 												<span class="label label-danger break-word-cat">Thời trang Nam/Nữ <i class="fa fa-angle-double-right"></i> Áo <i class="fa fa-angle-double-right"></i> Áo sơ mi</span>
@@ -507,7 +509,9 @@
 												<img class="icons-svg small" src="assets/images/svg/image-temp.svg">
 											</td>
 											<td>
-												Thông hơi Quảng Châu siêu mát cho bé trai và gái <span class="btn btn-success btn-xs">Đã ẩn</span>
+												Thông hơi Quảng Châu siêu mát cho bé trai và gái 
+												<div><label class="btn btn-default btn-xs margin-b">Shop: Shusi Shop</label></div>
+												<div><span class="btn btn-success btn-xs">Đã ẩn</span></div>
 											</td>
 											<td>
 												<span class="label label-danger break-word-cat">Danh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 leve</span>
