--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -397,6 +397,7 @@
 						<li><a href="admin-statistic-list-shop.html">Admin Statistic List Shop</a></li>
 						<li><a href="admin-setting-design.html">Admin Setting Design</a></li>
 						<li><a href="admin-manage-shop.html">Admin Manage Shop</a></li>
+						<li><a href="admin-order-list.html">Admin Order List</a></li>
 					</ul>
 				</div>
 				<div class="admin">
