3B - add admin-order-detail

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -398,6 +398,7 @@
 						<li><a href="admin-setting-design.html">Admin Setting Design</a></li>
 						<li><a href="admin-manage-shop.html">Admin Manage Shop</a></li>
 						<li><a href="admin-order-list.html">Admin Order List</a></li>
+						<li><a href="admin-order-detail.html">Admin Order Detail</a></li>
 					</ul>
 				</div>
 				<div class="admin">
