3B - update product-details

--- a/3B-WEB/product-details.html
+++ b/3B-WEB/product-details.html
@@ -758,7 +758,16 @@
 									</div>
 									<!-- /custom slb 2 -->
 								</div>
-								<div class="col-md-3"><span class="price txt-red">125.000đ</span></div>
+								<div class="col-md-3">
+									<span class="price txt-red">125.000đ</span>
+									<span class="quality">
+										<span class="quanlity-block">
+											<button class="btn btn-default">-</button>
+											<span>1</span>
+											<button class="btn btn-default">+</button>
+										</span>
+									</span>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -799,7 +808,16 @@
 									</div>
 									<!-- /custom slb 2 -->
 								</div>
-								<div class="col-md-3"><span class="price txt-red">125.000đ</span></div>
+								<div class="col-md-3">
+									<span class="price txt-red">125.000đ</span>
+									<span class="quality">
+										<span class="quanlity-block">
+											<button class="btn btn-default">-</button>
+											<span>1</span>
+											<button class="btn btn-default">+</button>
+										</span>
+									</span>
+								</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
